WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305441
[GTK][WPE][Coordinated Graphics][Damage Tracking] async scroll causes flickering tiles
https://bugs.webkit.org/show_bug.cgi?id=305441
Summary
[GTK][WPE][Coordinated Graphics][Damage Tracking] async scroll causes flicker...
Fujii Hironori
Reported
2026-01-13 18:39:10 PST
Created
attachment 477989
[details]
scrollblock.html [GTK][WPE][Coordinated Graphics] async scroll causes flickering tiles 1. Load the content 2. Send some wheel events to scroll the page by about 2 window heights to show unpainted tiles 3. Wait for about 5 seconds to start the overlay scrollbars disappearing animation 4. Some tiles are flickering This is hard to reproduce. Repeat these steps 10-20 times.
Attachments
scrollblock.html
(1.19 KB, text/html)
2026-01-13 18:39 PST
,
Fujii Hironori
no flags
Details
screen capture
(12.26 MB, video/x-matroska)
2026-01-13 19:29 PST
,
Fujii Hironori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-01-13 19:29:28 PST
Created
attachment 477990
[details]
screen capture
Fujii Hironori
Comment 2
2026-01-13 20:13:56 PST
Disabling DAMAGE_TRACKING make the problem not happening. diff --git a/Source/WTF/wtf/PlatformEnableGlib.h b/Source/WTF/wtf/PlatformEnableGlib.h index a50993596280..81848a153a0f 100644 --- a/Source/WTF/wtf/PlatformEnableGlib.h +++ b/Source/WTF/wtf/PlatformEnableGlib.h @@ -72,5 +72,5 @@ #endif #if ENABLE(WPE_PLATFORM) || PLATFORM(GTK) -#define ENABLE_DAMAGE_TRACKING 1 +#define ENABLE_DAMAGE_TRACKING 0 #endif
Fujii Hironori
Comment 3
2026-02-04 22:04:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57931
EWS
Comment 4
2026-02-06 17:03:42 PST
Committed
306987@main
(c898f5980bec): <
https://commits.webkit.org/306987@main
> Reviewed commits have been landed. Closing PR #57931 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug