[GTK][WPE][Coordinated Graphics] The combination of damage tracking and async scrolling causes flickering https://bugs.webkit.org/show_bug.cgi?id=305441

Reviewed by Carlos Garcia Campos.

The damage tracking tracks the area that is actually drawn, and updates only
the painted area.

If async scrolling scrolled to the area no tiles were covered while the main
thread was busy, new tiles would be created and drawn after the main thread was
unblocked. However, the area was not recorded as the damage area.

Changed CoordinatedPlatformLayer::updateBackingStore() to collect the area
where new tiles are created, and add to the damage area.

Co-authored-by: Pawel Lampe <plampe@igalia.com>

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedBackingStoreProxy.cpp:
(WebCore::CoordinatedBackingStoreProxy::updateIfNeeded):
(WebCore::CoordinatedBackingStoreProxy::createOrDestroyTiles):
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedBackingStoreProxy.h:
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayer.cpp:
(WebCore::CoordinatedPlatformLayer::updateBackingStore):

Canonical link: https://commits.webkit.org/306987@main